recommendations endpoint hotfix, swagger update
