# recommender/routes/api.py
@@ -4,6 +4,7 @@ from ..services.front_api_helpers import (
     update_recommendation,
     check_if_match,
     save_summoner_profile,
+    champion_id_to_name,
 )
 from flask import Blueprint, jsonify, request
 from ..services.recommender import Recommender
@@ -21,7 +22,7 @@ def get_matches(summoner_name):
     summoner_id = get_summoner_id(summoner_name)
 
     if not summoner_id:
-        return jsonify({"message": "Summoner not found."}), 404
+        return jsonify({"message": "Summoner not found"}), 404
 
     matches = get_summoner_matches(summoner_id)
     return jsonify(matches), 200
@@ -38,7 +39,7 @@ def get_champions():
             result.append(
                 {
                     "champion_id": champion[0],
-                    "chmapion_name": champion[1],
+                    "champion_name": champion[1],
                 }
             )
 
@@ -51,9 +52,27 @@ def get_champion_rotations():
     champion_rotations = riot_api.get_champion_rotations()
 
     if not champion_rotations:
-        return jsonify({"message": "Invalid API key."}), 400
+        return jsonify({"message": "Champion rotations not found"}), 404
 
-    return jsonify(champion_rotations), 200
+    free_champions = [
+        champion_id_to_name(free_champion_id, API_KEY)
+        for free_champion_id in champion_rotations["freeChampionIds"]
+    ]
+    free_champions_for_new_players = [
+        champion_id_to_name(free_champion_id_for_new_players, API_KEY)
+        for free_champion_id_for_new_players in champion_rotations[
+            "freeChampionIdsForNewPlayers"
+        ]
+    ]
+    max_new_player_level = champion_rotations["maxNewPlayerLevel"]
+
+    result = {
+        "freeChampions": free_champions,
+        "freeChampionsForNewPlayers": free_champions_for_new_players,
+        "maxNewPlayerLevel": max_new_player_level,
+    }
+
+    return jsonify(result), 200
 
 
 @main.route("/recommendations/<string:summoner_name>", methods=["GET"])
@@ -64,7 +83,7 @@ def get_recommendations(summoner_name):
 
     user = Summoner.create_from_name(summoner_name)
     if not user:
-        return jsonify({"message": "User not found."}), 404
+        return jsonify({"message": "User not found"}), 404
 
     user_recommender = Recommender(user)
     recommendations = user_recommender.get_recommendations(number_of_recommendations)
@@ -90,7 +109,7 @@ def update_recommendation_status(summoner_name):
         if not summoner_id:
             return jsonify({"message": "Summoner not found."}), 404
         if not recommended_summoner_id:
-            return jsonify({"message": "Recommended summoner not found."}), 404
+            return jsonify({"message": "Summoner not found."}), 404
 
         try:
             update_recommendation(summoner_id, recommended_summoner_id, status)
@@ -119,19 +138,19 @@ def profile():
             languages = data.get("languages")
             age = data.get("age")
             preferred_champions_ids_and_lines = data.get(
-                "preferred_champions_ids_and_lines"
+                "preferred_champion_ids_and_lines"
             )
             favourite_champion_id = data.get("favourite_champion_id")
             favourite_line = data.get("favourite_line")
-            description = data.get("description")
+            long_description = data.get("long_description")
             short_description = data.get("short_description")
         except KeyError:
-            return jsonify({"message": "Invalid request."}), 400
+            return jsonify({"message": "Invalid request"}), 400
 
         profile_exists = get_summoner_id(name)
 
         if profile_exists:
-            return jsonify({"message": "Profile already exists."}), 400
+            return jsonify({"message": "Profile already exists"}), 409
 
         save_summoner_profile(
             API_KEY,
@@ -143,10 +162,10 @@ def profile():
             preferred_champions_ids_and_lines,
             favourite_champion_id,
             favourite_line,
-            description,
+            long_description,
             short_description,
         )
 
-        return jsonify({"message": "Profile saved."}), 200
+        return jsonify({"message": "Profile created successfully"}), 200
 
-    return jsonify({"message": "Invalid request."}), 400
+    return jsonify({"message": "Invalid request"}), 400
